fixed text align of h1

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ body {
   box-shadow: 10px 5px 5px grey;
 }
 
-.show-data > h1 {
+h1 {
   text-align: center;
 }
 
